maze.lessons.maze.island.IslandMaze.scala.error
Escaper:16: error: '}' expected but 'case' found.
  case 1 => {
  ^Escaper:32: error: '}' expected but 'case' found.
case _ => {println("Ce cas ne devrait pas arriver. Corrigez ce problème svp.")}
^Escaper:34: error: eof expected but '}' found.
}
^